<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtFoodName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_food_name"
            android:inputType="text"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="24sp"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtFoodDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_food_description"
            android:inputType="text"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="24sp"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtFoodPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_food_price"
            android:inputType="text"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="24sp"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtFoodDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_food_discount"
            android:inputType="text"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="24sp"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true" />


        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <info.hoang8f.widget.FButton
                android:id="@+id/btnSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:fButtonColor="@color/colorPrimary"
                app:shadowColor="@android:color/black"
                app:shadowEnabled="true"
                app:shadowHeight="3dp"
                app:cornerRadius="8dp"
                />
            <info.hoang8f.widget.FButton
                android:id="@+id/btnUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:fButtonColor="@color/colorPrimaryDark"
                app:shadowColor="@android:color/black"
                app:shadowEnabled="true"
                app:shadowHeight="3dp"
                app:cornerRadius="8dp"
                />
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>