<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8sp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtStaffPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="033212322558"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtStaffPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="1234"
            android:hint="@string/password"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="24sp"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />
    </LinearLayout>
    <info.hoang8f.widget.FButton
        android:id="@+id/btnAccessLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:layout_margin="8dp"
        app:fButtonColor="@color/btnLogin"
        app:shadowColor="@android:color/black"
        app:shadowEnabled="true"
        app:shadowHeight="3dp"
        app:cornerRadius="8dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>